apps/ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  tls:
    - hosts:
        - ntfy.bradmedia.net
  rules:
    - host: ntfy.bradmedia.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy
                port:
                  number: 80
